# p3dx_description_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: p3dx_description_ros1.launch  p3dx_description_ros2.launch.py  rviz_p3dx_ros1.launch
meshes/: back_rim.stl  back_sonar.stl  center_hubcap.stl  center_wheel.stl  chassis.stl  front_rim.stl  front_sonar.stl  left_hubcap.stl  left_wheel.stl  right_hubcap.stl  right_wheel.stl  swivel.stl  top.stl
urdf/: pioneer3dx.xacro  pioneer3dx.xml  pioneer3dx_fixed_joints.urdf  pioneer3dx_fixed_joints.xml  pioneer3dx_wheel.xacro
